# imkb

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  DESIGN_EN.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  test_mvp.py
docs/: DESIGN.md  DESIGN_EN.md  ENVIRONMENT_SETUP.md
examples/: event.example.json  imkb.example.yml  local_llm_config.yml  mysql_event.json
src/imkb/: __init__.py  action_pipeline.py  cli.py  config.py  context.py  llm_client.py  models.py  rca_pipeline.py
src/imkb/adapters/: __init__.py  local_embeddings.py  local_storage.py  mem0.py
src/imkb/cache/: __init__.py  base.py  manager.py  memory.py  redis_cache.py
src/imkb/concurrency/: __init__.py  semaphore.py
src/imkb/extractors/: __init__.py  base.py  mysql_extractor.py  test_extractor.py
src/imkb/extractors/data/: mysql_knowledge.yaml  test_knowledge.yaml
src/imkb/observability/: __init__.py  config.py  init.py  metrics.py  tracer.py
src/imkb/prompts/: mock_responses.yaml
src/imkb/prompts/action_generation/v1/: meta.yaml  template.jinja2
src/imkb/prompts/mysql_rca/v1/: meta.yaml  template.jinja2
src/imkb/prompts/test_rca/v1/: meta.yaml  template.jinja2
tests/: __init__.py  conftest.py  test_action_pipeline.py  test_cli.py  test_config.py  test_extractors.py  test_llm_client.py  test_local_llm_client.py  test_namespace_isolation.py  test_rca_pipeline.py
